--- a/Firmware/.vscode/settings.json
+++ b/Firmware/.vscode/settings.json
@@ -24,5 +24,6 @@
         "tps.h": "c",
         "ignition.h": "c",
         "spark_logic.h": "c"
-    }
+    },
+    "cmake.sourceDirectory": "C:/Users/alireza/Documents/GitHub/smart-generator-controller/Firmware/Drivers/CMSIS/NN"
 }
