Developed the ecu ini file further

--- a/Firmware/.vscode/settings.json
+++ b/Firmware/.vscode/settings.json
@@ -26,7 +26,8 @@
         "spark_logic.h": "c",
         "*.txt": "c",
         "*.make": "c",
-        "cmsis_os.h": "c"
+        "cmsis_os.h": "c",
+        "*.ini": "c"
     },
     "cmake.sourceDirectory": "C:/Users/alireza/Documents/GitHub/smart-generator-controller/Firmware/Drivers/CMSIS/NN"
 }
