--- a/Firmware/.vscode/settings.json
+++ b/Firmware/.vscode/settings.json
@@ -31,5 +31,6 @@
         "electronic_throttle.h": "c",
         "thermistor.h": "c"
     },
-    "cmake.sourceDirectory": "C:/Users/alireza/Documents/GitHub/smart-generator-controller/Firmware/Drivers/CMSIS/NN"
+    "cmake.sourceDirectory": "C:/Users/alireza/Documents/GitHub/smart-generator-controller/Firmware/Drivers/CMSIS/NN",
+    "cortex-debug.variableUseNaturalFormat": true
 }
