--- a/Tuner Studio/smart_generator_controller - Copy.ini
+++ b/Tuner Studio/smart_generator_controller - Copy.ini
@@ -2,12 +2,14 @@
 ; Author: Alireza Eskandari
 
 ; this should stop TS from looking for the CAN ID in the 2nd byte location and allow the page reads to work correctly.
-enable2ndByteCanID = false
-
+;enable2ndByteCanID = false
+[MegaTune]
+   MTversion      = 2.25 ; MegaTune itself; needs to match exec version.
+   versionInfo    = "S"  ; Put this in the title bar.
+   queryCommand   = "Q"  ; Verify against signature.
+   signature      = "JimStim dev.2025.07"
 [TunerStudio]
-    queryCommand = "Q"          ; Signature request command
-    signature = "Smart Gen Controller"     ; ECU signature
-    versionInfo = "V"           ; Version display prefix
+
 
 [PcVariables]
 
@@ -23,24 +25,14 @@ enable2ndByteCanID = false
 	nPages				= 1
 
 	pageIdentifier		= "\x00\x00"
-	pageReadCommand		= "R%2o%2c"
+	pageReadCommand		= "R"
 	burnCommand			= "B"
 	pageValueWrite		= "W%2o%v"
 	pageChunkWrite		= "C%2o%2c%v"
-	crc32CheckCommand	= "k%2o%2c"
-	retrieveConfigError = "e"
+	crc32CheckCommand	= "k"
 
-;communication settings
-; Milliseconds delay after burn command. See https://sourceforge.net/p/rusefi/tickets/77/
-	pageActivationDelay = 500
-;e.g. put writeblocks off and add an interwrite delay
-	writeBlocks = on
-	interWriteDelay = 10
-	blockReadTimeout	= 3000; Milliseconds general timeout
 
- ; delayAfterPortOpen = 500
-
-	blockingFactor = 1024 ; max chunk size
+	;blockingFactor = 1024 ; max chunk size
     pageSize            = 1024
 ; This page is used for settings
 page = 1
@@ -49,6 +41,10 @@ page = 1
    ;  name       = scalar, type,    offset,        units,     scale, translate,    lo,      hi, digits
 
 [OutputChannels]
+	ochGetCommand	= "O"
+
+; see TS_OUTPUT_SIZE in console source code
+	ochBlockSize	= 32
 
 RPM_value = scalar, F32, 0, "RPM", 1, 0          ; Starts at offset 4 (F32 = 4 bytes)
 MAP_value = scalar, F32, 4, "kPa", 0.01, 0       ; Starts at offset 8 (F32 = 4 bytes)
