schematic and comms development

--- a/Firmware/.vscode/settings.json
+++ b/Firmware/.vscode/settings.json
@@ -29,7 +29,8 @@
         "cmsis_os.h": "c",
         "*.ini": "c",
         "electronic_throttle.h": "c",
-        "thermistor.h": "c"
+        "thermistor.h": "c",
+        "stm32f4xx_hal.h": "c"
     },
     "cmake.sourceDirectory": "C:/Users/alireza/Documents/GitHub/smart-generator-controller/Firmware/Drivers/CMSIS/NN",
     "cortex-debug.variableUseNaturalFormat": true
