--- a/Tuner Studio/smart_generator_controller - Copy.ini
+++ b/Tuner Studio/smart_generator_controller - Copy.ini
@@ -3,13 +3,11 @@
 
 ; this should stop TS from looking for the CAN ID in the 2nd byte location and allow the page reads to work correctly.
 ;enable2ndByteCanID = false
-[MegaTune]
-   MTversion      = 2.25 ; MegaTune itself; needs to match exec version.
+
+[TunerStudio]
    versionInfo    = "S"  ; Put this in the title bar.
    queryCommand   = "Q"  ; Verify against signature.
    signature      = "JimStim dev.2025.07"
-[TunerStudio]
-
 
 [PcVariables]
 
@@ -47,13 +45,13 @@ page = 1
 	ochBlockSize	= 32
 
 RPM_value = scalar, F32, 0, "RPM", 1, 0          ; Starts at offset 4 (F32 = 4 bytes)
-MAP_value = scalar, F32, 4, "kPa", 0.01, 0       ; Starts at offset 8 (F32 = 4 bytes)
-TPS_value = scalar, F32, 8, "%", 0.01, 0        ; Starts at offset 12 (F32 = 4 bytes)
-lambda_value = scalar, F32, 12, "", 1.0E-4, 0    ; Starts at offset 16 (F32 = 4 bytes)
+MAP_value = scalar, F32, 4, "kPa", 1, 0       ; Starts at offset 8 (F32 = 4 bytes)
+TPS_value = scalar, F32, 8, "%", 1, 0        ; Starts at offset 12 (F32 = 4 bytes)
+lambda_value = scalar, F32, 12, "", 1, 0    ; Starts at offset 16 (F32 = 4 bytes)
 ignition_advance_value = scalar, F32, 16, "deg", 0.02, 0 ; Starts at offset 20 (F32 = 4 bytes)
 spark_dwell_value = scalar, F32, 20, "ms", 1, 0         ; Starts at offset 24 (F32 = 4 bytes)
-VBatt_value = scalar, F32, 24, "V", 0.001, 0             ; Starts at offset 28 (F32 = 4 bytes)
-coolant_temp_value = scalar, F32, 28, "C", 0.001, 0      ; Starts at offset 32 (F32 = 4 bytes)lant_temp_value = scalar, F32, 28, "C", 0.001, 0
+VBatt_value = scalar, F32, 24, "V", 1, 0             ; Starts at offset 28 (F32 = 4 bytes)
+coolant_temp_value = scalar, F32, 28, "C", 1, 0      ; Starts at offset 32 (F32 = 4 bytes)lant_temp_value = scalar, F32, 28, "C", 0.001, 0
 
 [Replay]
 [ExtendedReplay]
@@ -81,14 +79,14 @@ coolant_temp_value = scalar, F32, 28, "C", 0.001, 0      ; Starts at offset 32 (
    ; ld    = Label decimal places for display of Lo and Hi, above.
 
     gaugeCategory = "Main"
-    ;Name               Var            Title                 Units     Lo     Hi     LoD    LoW   HiW   HiD vd ld
-    rpm_gauge			= RPM_value,			"RPM - engine speed",		"RPM",		0, {5000},	200, {100}, {4500},  {5000},	0,	0
-	map_gauge		    = MAP_value,					"MAP",		"kPa",		0,	300,		10,	10,	200,	200,	0,	0
+    ;Name               Var            Title                                Units     Lo     Hi     LoD    LoW   HiW   HiD vd ld
+    rpm_gauge			= RPM_value,			"RPM - engine speed",		"RPM",		0, 5000,	500, 500, 4000,  5000,	0,	0
+	map_gauge		    = MAP_value,					"MAP",		"kPa",		0,	120,		10,	0,	80,	95,	0,	0
 	tps_gauge			= TPS_value,		"Throttle position",			"%",		0,	100,		0,		0,	100,	100,	1,	1
 	lambda_gauge		= lambda_value, "Lambda",	"",		0.65,	1.2,		0.7,	0.75,		1.1,	1.15,	3,	2
 	advance_gauge       = ignition_advance_value,		"Timing: ignition",	"degrees",	-100,	100,	-999,	-999,	999,	999,	1, 1
 	dwell_gauge		    = spark_dwell_value,			"Dwell",		"mSec",		0,	10,	0.5,	1.0,	6.0,	8.0,	1, 1
-	vbatt_gauge		    = VBatt_value,		"Battery",			"V",		8,	21,		9,	10,		17,	19,	1,	1
+	vbatt_gauge		    = VBatt_value,		"Battery",			"V",		0,	18,		6,	10,		15,	16,	1,	1
     clt_gauge			= coolant_temp_value,		"Coolant temp",		"C",		-40,	140,	-15,		1,		95,	110,	1,	1
 
 
