PC to controller comms advancements

--- a/Firmware/.vscode/settings.json
+++ b/Firmware/.vscode/settings.json
@@ -27,7 +27,7 @@
         "*.txt": "c",
         "*.make": "c",
         "cmsis_os.h": "c",
-        "*.ini": "c",
+        "*.ini": "ini",
         "electronic_throttle.h": "c",
         "thermistor.h": "c",
         "stm32f4xx_hal.h": "c"
