--- a/Tuner Studio/smart_generator_controller.ini
+++ b/Tuner Studio/smart_generator_controller.ini
@@ -25,8 +25,8 @@ enable2ndByteCanID = false
 
 	pageReadCommand		= "r%2o%2c"
 	burnCommand			= "B"
-	pageValueWrite		= "w%2o%2c%2v"
-	pageChunkWrite		= "W%2o%2c%2v"
+	pageValueWrite		= "W%2o%2c%v"
+	pageChunkWrite		= "W%2o%2c%v"
 	crc32CheckCommand	= "k"
 
 
